# testing-fast-api

./: hello.py  pyproject.toml  test.py
apps/: greet_async.py  hello.py  starlette_hello.py
dependency/: dependency.py
model/: tag.py
pidantic/: stuff.py
readmes/: hello.md
shell-examples/: hello.md
web/: tag.py
