[tool.poetry]
name = "testing-fast-api"
version = "0.1.0"
description = "testing-fast-api"
authors = ["Serghei <siracencoserghei@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
httpie = "^3.2.2"
requests = "^2.31.0"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
